--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,122 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    display: flex;
+}
+
+.navbar {
+    height: 80px;
+    width: 100vw;
+    border-bottom: solid 1px lightgray;
+    display: flex;
+    text-decoration: none;
+    justify-content: space-evenly;
+}
+
+.app-name-link,
+.sign-in-link,
+.cart-link {
+    text-decoration: none;
+}
+
+.cart {
+    border-left: solid 1px lightgray;
+}
+
+.main-homepage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+/* Homepage - shop by category */
+
+.category {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+.category-type {
+    display: flex;
+    width: 100vw;
+    justify-content: space-evenly;
+}
+
+.clothing,
+.jewelry,
+.toys {
+    height: 200px;
+    width: 200px;
+    border: solid 1px lightgray;
+}
+
+
+/* Homepage - shop by products */
+
+.products {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+.products-type {
+    display: flex;
+    width: 100vw;
+    justify-content: space-evenly;
+}
+
+.tshirts,
+.ear-rings,
+.legos {
+    height: 200px;
+    width: 200px;
+    border: solid 1px lightgray;
+}
+
+.clothing-link,
+.jewelry-link,
+.toys-link {
+    text-decoration: none;
+}
+
+.tshirts-link,
+.ear-rings-link,
+.legos-link {
+    text-decoration: none;
+}
+
+
+/* Category.js */
+
+.main-category-div {
+    display: flex;
+    flex-direction: column;
+}
+
+.category-name {
+    display: flex;
+}
+
+.category-sidebar-content {
+    display: flex;
+}
+
+.sidebar {
+    display: flex;
+    height: 100vh;
+    width: 200px;
+    border: solid 1px lightgray;
+}
+
+.content {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
 }
