--- a/src/index.css
+++ b/src/index.css
@@ -59,9 +59,12 @@ body {
     justify-content: space-evenly;
 }
 
-.clothing,
+
+/* .clothing,
 .jewelry,
-.toys {
+.toys { */
+
+.each-categories {
     height: 200px;
     width: 200px;
     border: solid 1px lightgray;
