--- a/src/index.css
+++ b/src/index.css
@@ -218,3 +218,20 @@ body {
     width: 80px;
     /* border: solid 1px lightgray; */
 }
+
+
+/* cart page */
+
+.main-cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    padding: 5px 5px 5px 5px;
+}
+
+.main-cart div {
+    display: flex;
+    justify-items: space-evenly;
+    padding: 5px 5px 5px 5px;
+}
